--- a/Pages/edit/adminEdit/style.css
+++ b/Pages/edit/adminEdit/style.css
@@ -1,3 +1,4 @@
+
 .button{
   color: #910101;
   padding: 15px 32px;
@@ -9,19 +10,14 @@
 .button:hover{
         background-color: #b00000;
 }
-
 .imageRound {
         border-radius: 20px;
-}
-
-.imageRound img{
-        width: auto;
 }
 .header{
         padding: 60px;
         text-align: center;
-        background-color: #a9a9a9;
+        background-color: #FF0000;
         color: #000000;
         font-size: 30px;
-        font-family: Lucida;
+        font-family: Helvetica;
 }
