--- a/Pages/edit/adminEdit/style.css
+++ b/Pages/edit/adminEdit/style.css
@@ -16,7 +16,7 @@
 .header{
         padding: 60px;
         text-align: center;
-        background-color: #FF0000;
+        background-color: #ededed;
         color: #000000;
         font-size: 30px;
         font-family: Helvetica;
